# sortysort

./: Cargo.toml  README.md
docs/: index.html  sortysort.js  sortysort_bg.wasm  sw.js
src/: lib.rs  main.rs
