[package]
name = "sortysort"
version = "0.1.0"
authors = ["Selyatin Ismet <selyatinismet@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.15.0"

[target.'cfg(not(target_family =  "wasm"))'.dependencies]
rand = "0.8.4"

[target.'cfg(target_family = "wasm")'.dependencies]
js-sys = "0.3.55"

[profile.release]
opt-level = 2 # fast and small wasm
lto = "fat"

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }
